# marching-cubes-sdf-visualizer

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs
src/app/: gui.rs  mod.rs  raw_loader.rs  sdfs.rs  shader.wgsl  textures.rs  transforms.rs  uniforms.rs  vertex.rs
src/app/mesh/: mod.rs
