[package]
name = "marching-cubes-sdf-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
env_logger = "0.11.9"
glam = { version = "0.32.0", features = ["bytemuck"] }
log = "0.4.29"
pollster = "0.4.0"
wgpu = { version = "27.0.1", default-features = false, features = ["wgsl", "webgpu", "std", "vulkan", "parking_lot"] }
winit = "0.30.12"
